fixed social media icons padding on mobile phones

--- a/client/stylesheets/main.css
+++ b/client/stylesheets/main.css
@@ -380,5 +380,8 @@ body{
     margin-left: auto;
     margin-right:auto;
   }
+  .social-media{
+    padding-left:20px;
+  }
 
 }
